--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,25 +1,21 @@
-pipeline {
-    agent any
-    stages {
-        stage('Installer Docker') {
-            steps {
-                sh '''
-                    sudo apt-get update
-                    sudo apt-get install -y ca-certificates curl gnupg lsb-release
+#!/bin/bash
 
-                    sudo mkdir -p /etc/apt/keyrings
-                    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+# Met à jour les paquets et installe les dépendances
+sudo apt-get update -y
+sudo apt-get install -y ca-certificates curl gnupg lsb-release
 
-                    echo \
-                    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
-                    $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+# Ajoute la clé Docker
+sudo mkdir -p /etc/apt/keyrings
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
 
-                    sudo apt-get update
-                    sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+# Ajoute le dépôt Docker
+echo \
+"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+$(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-                    docker --version
-                '''
-            }
-        }
-    }
-}
+# Mise à jour et installation de Docker
+sudo apt-get update -y
+sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+
+# Vérifie que Docker est bien installé
+docker --version
