--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,26 @@
-sudo apt-get update
-sudo apt-get install ca-certificates curl
-sudo install -m 0755 -d /etc/apt/keyrings
-sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-sudo chmod a+r /etc/apt/keyrings/docker.asc
+pipeline {
+    agent any
+
+    stages {
+        stage('Installer Docker') {
+            steps {
+                sh '''
+                    sudo apt-get update
+                    sudo apt-get install -y ca-certificates curl gnupg lsb-release
+
+                    sudo mkdir -p /etc/apt/keyrings
+                    sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+
+                    echo \
+                    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+                    $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+                    sudo apt-get update
+                    sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+
+                    docker --version
+                '''
+            }
+        }
+    }
+}
