--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,24 +5,19 @@ pipeline {
         stage('Installer Docker') {
             steps {
                 sh '''
-                    # Mise à jour et installation des dépendances
                     sudo apt-get update
                     sudo apt-get install -y ca-certificates curl gnupg lsb-release
 
-                    # Ajout de la clé GPG Docker
                     sudo mkdir -p /etc/apt/keyrings
                     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
 
-                    # Ajout du dépôt Docker
                     echo \
                     "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
                     $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-                    # Mise à jour et installation de Docker
                     sudo apt-get update
                     sudo apt-get install -y docker-ce docker-ce-cli containerd.io
 
-                    # Vérification de l'installation
                     docker --version
                 '''
             }
@@ -30,10 +25,7 @@ pipeline {
 
         stage('Tester Docker') {
             steps {
-                sh '''
-                    # Téléchargement et exécution d'un conteneur test
-                    sudo docker run hello-world
-                '''
+                sh 'sudo docker run hello-world'
             }
         }
     }
